the images was changes for anothers where the Disney personal  appears, the logo was changed , and the css was modified cause the las images looked crushed

--- a/css-local/onepage.css
+++ b/css-local/onepage.css
@@ -676,7 +676,7 @@ textarea.border-form-control {
 	}
 
 	#header.transparent-header.dark:not(.sticky-header) #header-wrap {
-		background-color: #333;
+		background-color: #e20909;
 		border-bottom-color: rgba(255,255,255,0.1) !important;
 	}
 
