--- a/css-local/style.css
+++ b/css-local/style.css
@@ -14,11 +14,11 @@
     transform: scale(1.05, 1.02);
 }
 
-.Crsl_img{
+/*.Crsl_img{
     width: 100vw;
     height:100vh;
-    min-height: 1200px;
-    max-height: 1400px;
+    min-height: 600px;
+    max-height: 1000px;
 
 }
 
@@ -35,3 +35,22 @@
 
 }
 
+*/
+
+.Carousel_height{
+    height:1000px;
+
+}
+.Crsl_img{
+max-width: 100%; 
+ height: auto;
+}
+
+@media (max-width: 800px){
+
+
+    .Carousel_height{
+        height:400px;
+
+    }
+}
