change in the paddings

--- a/css-global/style.css
+++ b/css-global/style.css
@@ -369,7 +369,7 @@ span.middot {
 
 .noradius { -webkit-border-radius: 0 !important; -moz-border-radius: 0 !important; -ms-border-radius: 0 !important; -o-border-radius: 0 !important; border-radius: 0 !important; }
 
-.col-padding { padding: 60px; }
+.col-padding { padding: 60px 0; }
 
 .nopadding { padding: 0 !important; }
 
