--- a/css-local/style.css
+++ b/css-local/style.css
@@ -55,7 +55,7 @@ max-width: 100%;
 
     color:white;
     font-size: 64px !important;
-    padding: 0 10px 0 40px;
+    padding: 0 10px 0 80px;
 }
 
 .icon_whats{
@@ -88,22 +88,25 @@ max-width: 100%;
 }
 
 
-/*@keyframes ShadowBox {
+@keyframes ShadowBox {
     0% {
-        box-shadow: 0px 0px 0px #ea2e00;
+        transform: scale(1.0);
+        
     }
 
     50%{
-        box-shadow: 0px 0px 10px #ea2e00;
+        transform: scale(1.1);
+        
     }
   
     100% {
-        box-shadow: 0px 0px 0px #ea2e00;
+        transform: scale(1.0);
+        
     }
-  }*/
+  }
   
-  .buttom {
-     animation: ShadowBox 2s infinite;
+  .buttom_p {
+     animation: ShadowBox 3s infinite;
   }
 
 @media only screen and (max-width: 1415px){
@@ -111,7 +114,7 @@ max-width: 100%;
     .buttom{
         background:#ea2e00;
         height:70px;
-        width: 15%;
+        width: 18%;
         float:right;
         padding: 0 ;
          
