--- a/css-local/style.css
+++ b/css-local/style.css
@@ -116,12 +116,12 @@ max-width: 100%;
         height:70px;
         width: 18%;
         float:right;
-        padding: 0 ;
+        padding: 24px 0 ;
          
          text-align: center;
-          font-size: 22px;
+          font-size: 18px;
     
-    }
+    }   
 
 }
 
@@ -138,11 +138,35 @@ max-width: 100%;
         text-align: center;
     }
     .buttom{
-        display: none;
-    }
+        display: block;
+        font-size: 12px;
+        width: 100%;
+        height: 30px;
+        padding:  8px 0 0 0 ;
+
+        }
     .buttom_p{
         margin: 0px ;
     }
 
    
 }
+
+.logoDisney{
+
+    align-items: center;
+    float:left;
+    display:inline-block
+}
+
+
+@media only screen and (max-width: 600px){
+
+  
+
+        .logoDisney{
+
+            align-items: center;
+        }
+}
+
