--- a/css-local/style.css
+++ b/css-local/style.css
@@ -134,7 +134,7 @@ max-width: 100%;
         margin-right: 13px;  
      
     }
-    .certificacionñ{  
+    .certificacion{    
         text-align: center;
     }
     .buttom{
