--- a/css-local/style.css
+++ b/css-local/style.css
@@ -72,7 +72,7 @@ max-width: 100%;
     height:70px;
     width: 15%;
     float:right;
-    padding: 20px 0 ;
+    padding: 8px 0 ;
      
      text-align: center;
       font-size: 18px;
@@ -114,7 +114,7 @@ max-width: 100%;
     .buttom{
         background:#ea2e00;
         height:70px;
-        width: 18%;
+        width: 20%;
         float:right;
         padding: 24px 0 ;
          
@@ -122,6 +122,7 @@ max-width: 100%;
           font-size: 18px;
     
     }   
+    .jmp{display: none;}
 
 }
 
